core/cover max width issue resolved + footer spacing updates

--- a/wp-content/themes/child-theme/src/Providers/Theme/assets/scss/layout/_footer.scss
+++ b/wp-content/themes/child-theme/src/Providers/Theme/assets/scss/layout/_footer.scss
@@ -46,10 +46,6 @@
   gap: var(--wp--preset--spacing--40);
   max-width: var(--wp--style--global--content-size, 1440px);
   margin-inline: auto;
-
-  @include media(md) {
-    gap: var(--wp--preset--spacing--60);
-  }
 }
 
 // --------------------------------------------------------------------------
@@ -192,6 +188,10 @@
     list-style: none;
     margin: 0;
     padding: 0;
+  }
+
+  li {
+    display: inline-flex;
   }
 }
 
