--- a/wp-content/themes/parent-theme/src/Providers/Theme/assets/scss/common/_layout.scss
+++ b/wp-content/themes/parent-theme/src/Providers/Theme/assets/scss/common/_layout.scss
@@ -57,6 +57,21 @@
     margin-block-start: 0;
   }
 
+  // Constrain cover block inner content to narrow content width.
+  > .wp-block-cover.alignfull > .wp-block-cover__inner-container {
+    max-width: var(--wp--style--global--content-size);
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 100%;
+    padding: 0;
+  }
+
+  // Override WordPress core custom-position selectors (specificity 0,5,0)
+  // that reduce inner container width for positioned content.
+  > .wp-block-cover.alignfull.has-custom-content-position > .wp-block-cover__inner-container {
+    width: 100%;
+  }
+
   // Constrained content width (replaces is-layout-constrained)
   > *:not(.alignwide):not(.alignfull) {
     max-width: var(--wp--style--global--content-size, 1280px);
